2005-08-07

	* src/defs.h: modification for Win32.
	* src/main.c: check filename encoding only on Unix.

2005-08-07

	* src/codeconv.c: some fixes for Win32.

2005-08-07

	* src/procmsg.c: procmsg_send_queue(): close queue file before
	  removing it (Win32 fix).

2005-08-05

	* src/mh.c
	  src/session.c
	  src/mbox.c: braced Unix-specific code with #ifdef G_OS_UNIX.
	* configure.in: added -lws2_32 on MinGW environment.

2005-08-05

	* src/filter.c
	  configure.in: check for regex.h and regcomp().

2005-08-05

	* src/utils.[ch]: rename_force(): force rename even if the destination
	  file already exists (on non-Unix environment).
	* src/prefs.c
	  src/main.c: use rename_force().

2005-08-05

	* src/addrcache.c
	  src/compose.c
	  src/inc.c
	  src/action.c
	  src/session.c
	  src/main.c
	  src/utils.c
	  src/send_message.c
	  src/mbox.c
	  src/about.c
	  src/socket.c
	  src/socket.h
	  configure.in: enabled compilation with MinGW.

2005-08-04

	* src/compose.c
	  src/main.c
	  src/socket.[ch]: braced Unix-specific code with #ifdef G_OS_UNIX.

2005-08-04

	* configure.in: add -mms-bitfields to CFLAGS if the target is MinGW.

2005-08-04

	* src/utils.c: replaced tolower() with g_ascii_tolower().

2005-08-04

	* src/compose.c
	  src/main.c
	  src/utils.c
	  src/procmsg.c: replaced random() with portable g_random_*().

2005-08-04

	* src/about.c: modified version display.
	* src/socket.c: added sock_init() and sock_cleanup().

2005-08-04

	* src/mh.c: use GTimer for measuring time.
	* src/inc.[ch]
	  src/recv.c
	  src/session.[ch]: replaced gettimeofday() with portable
	  g_get_current_time(). 
	* src/socket.c: corrected signedness. Replaced usleep() with
	  portable g_usleep().

2005-08-04

	* src/prefs_common.c: removed mgedit from exteditor's candidates.

2005-08-03

	* src/utils.c:
	  execute_async()
	  execute_sync(): replaced fork() + exec() with GSpawn.

2005-08-02

	* src/compose.c
	  src/textview.c
	  src/quote_fmt_parse.y
	  src/pop.c
	  src/prefs_account.c