@@ -2,6 +2,7 @@
 
 	* src/defs.h: modification for Win32.
 	* src/main.c: check filename encoding only on Unix.
+	* src/prefs_common.c: modification for Win32.
 
 2005-08-07
 
